--- a/index.htm
+++ b/index.htm
@@ -12,13 +12,13 @@
     gtag('config', 'UA-210928789-1');    </script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Заказать ремонт электро/бензоинструментов и садовой техники в Могилеве | ПраймПроект</title>
-    <meta name="keywords" content="Ремонт электро/бензоинструментов и садовой техники полного цикла в Могилеве">
+    <title>Заказать ремонт электро/бензоинструментов и садовой техники в Москве | ПраймПроект</title>
+    <meta name="keywords" content="Ремонт электро/бензоинструментов и садовой техники полного цикла в Москве">
     <meta name="description"
-          content="Сервисный центр ООО «Техстройсервис» выполняет ремонт электро-/бензоинструментов и садовой техники в городе Могилеве, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного центра уже более 20 лет выполняют ремонт электро-/бензоинструментов и садовой техники любой сложности.">
+          content="Сервисный центр ООО «Техстройсервис» выполняет ремонт электро-/бензоинструментов и садовой техники в городе Москве, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного центра уже более 20 лет выполняют ремонт электро-/бензоинструментов и садовой техники любой сложности.">
     <meta property="og:title" content="ООО Техстройсервис">
     <meta property="og:description"
-          content="Сервисный центр ООО «Техстройсервис» выполняет ремонт электро-/бензоинструментов и садовой техники в городе Могилеве, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного центра уже более 20 лет выполняют ремонт электро-/бензоинструментов и садовой техники любой сложности.">
+          content="Сервисный центр ООО «Техстройсервис» выполняет ремонт электро-/бензоинструментов и садовой техники в городе Москве, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного центра уже более 20 лет выполняют ремонт электро-/бензоинструментов и садовой техники любой сложности.">
     <meta property="og:image" content="https://tsservice.by/uploads/logotip-tehstroyservis.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tsservice.by/">
@@ -104,10 +104,6 @@
                             <a href="tel:+375447279043">+375(44) 727-90-43</a>
                         </div>
 
-                        <div class="email" itemprop="email">
-                            <a href="mailto:info@tss.by">info@tss.by</a>
-                        </div>
-
                     </div>
                     <!--/Вывод реквизитов сайта-->
                     <span class="j-callme__button">Обратный звонок</span>
@@ -136,43 +132,6 @@
 
                 </div>
 
-                <div class="top-features">
-                    <div class="plugins clearfix">
-
-
-                        <div class="mg-layer" style="display: none"></div>
-                        <div class="mg-fake-cart" style="display: none;">
-                            <a class="mg-close-fake-cart mg-close-popup" href="javascript:void(0);"></a>
-
-                            <div class="popup-header">
-                                <div class="title">Корзина товаров</div>
-                            </div>
-                            <div class="popup-body">
-                                <table class="small-cart-table">
-
-
-                                </table>
-                            </div>
-                            <ul class="total sum-list">
-                                <li class="total-sum">Общая сумма:
-                                    <span></span>
-                                </li>
-                            </ul>
-                            <div class="popup-footer">
-                                <ul class="total">
-                                    <li class="checkout-buttons">
-                                        <a href="javascript:void(0);" class="mg-close-popup">Продолжить покупки</a>
-                                        <a href="cart.html" class="default-btn">Оформить</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-
-                <a href="javascript:void(0);" class="top-menu-toggle"></a>
 
 
             </div>
@@ -290,6 +249,7 @@
                     <a href="contacts.html">
                         <span>Контакты</span>
                     </a>
+
                 </li>
             </ul>
         </div>
@@ -303,7 +263,7 @@
                         src='uploads/slider/servisnyy-tsentr.jpg' alt='Сервисный центр' title='Сервисный центр'></a>
                     <div class='nameaction'>
                         <div class='slide-title'>Сервисный центр ООО Техстройсервис</div>
-                        <div class='slide-desc'>Выполняемs ремонт любой сложности</div>
+                        <div class='slide-desc'>Выполняем ремонт любой сложности</div>
                         <a class='slide-btn default-btn' aria-label='Заказать ремонт' href='catalog.html'>Заказать
                             ремонт</a></div>
                 </div>
@@ -346,46 +306,35 @@
     <div class="mg-main-menu-holder">
         <a href="javascript:void(0);" class="mg-main-menu-toggle"><span class="toggle-icon"></span> Наши услуги</a>
         <div class="centered">
-            <div class="title-catalog"><strong>ОOO Техстройсервис</strong> - это организация, которая в течение 20 лет
+            <div class="title-catalog"><strong>ООО Техстройсервис</strong> - это организация, которая в течение 20 лет
                 занимается ремонтом электро- и бензоинструментов, садовой, малой дорожной техники ведущих
                 производителей, а также продажей высокотехнологичных изделий и оснастки для металло-, деревообработки и
                 стройки, поставкой оригинальных запасных частей.
             </div>
             <h1>Услуги сервисного центра ООО Техстройсервис</h1>
             <ul class="mg-main-menu">
-
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
-                        <img src="uploads/cat_remont-benzoinstrumenta-1.jpg" alt="Ремонт бензоинструмента в Могилеве"
-                             title="Ремонт бензоинструмента в Могилеве">
+                        <img src="uploads/cat_remont-benzoinstrumenta-1.jpg" alt="Ремонт бензоинструмента в Москве"
+                             title="Ремонт бензоинструмента в Москве">
                         <span>Ремонт бензоинструмента</span>
                     </a>
                 </li>
 
-
-                <li class="">
-                    <a href="remont-benzoinstrumenta.html">
-                        <img src="uploads/cat_remont-sadovoy-tehniki-1.jpg" alt="Ремонт садовой техники в Могилеве"
-                             title="Ремонт садовой техники в Могилеве">
-                        <span>Ремонт садовой техники</span>
-                    </a>
-                </li>
-
-
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
                         <img src="uploads/cat_remont-dvigateley.png"
-                             alt="Ремонт бензиновых и электродвигателей в Могилеве"
-                             title="Ремонт бензиновых и электродвигателей в Могилеве">
-                        <span>Ремонт бензиновых двигателей</span>
+                             alt="Ремонт бензиновых и электродвигателей в Москве"
+                             title="Ремонт бензиновых и электродвигателей в Москве">
+                        <span>Ремонт бензиновых и электродвигателей</span>
                     </a>
                 </li>
 
 
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
-                        <img src="uploads/cat_remont-teplovyh-pushek-1.jpg" alt="Ремонт тепловых пушек в Могилеве"
-                             title="Ремонт тепловых пушек в Могилеве">
+                        <img src="uploads/cat_remont-teplovyh-pushek-1.jpg" alt="Ремонт тепловых пушек в Москве"
+                             title="Ремонт тепловых пушек в Москве">
                         <span>Ремонт тепловых пушек</span>
                     </a>
                 </li>
@@ -393,8 +342,8 @@
 
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
-                        <img src="uploads/cat_remont-generatora.png" alt="Ремонт генераторов в Могилеве"
-                             title="Ремонт генераторов в Могилеве">
+                        <img src="uploads/cat_remont-generatora.png" alt="Ремонт генераторов в Москве"
+                             title="Ремонт генераторов в Москве">
                         <span>Ремонт генераторов</span>
                     </a>
                 </li>
@@ -403,8 +352,8 @@
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
                         <img src="uploads/cat_remont-motoblokov-1.jpg"
-                             alt="Ремонт мотоблоков и мотокультиваторов в Могилеве"
-                             title="Ремонт мотоблоков и мотокультиваторов в Могилеве">
+                             alt="Ремонт мотоблоков и мотокультиваторов в Москве"
+                             title="Ремонт мотоблоков и мотокультиваторов в Москве">
                         <span>Ремонт мотоблоков и мотокультиваторов</span>
                     </a>
                 </li>
@@ -413,9 +362,19 @@
                 <li class="">
                     <a href="remont-benzoinstrumenta.html">
                         <img src="uploads/cat_remont-snegouborochnoy-tehniki-1.jpg"
-                             alt="Ремонт снегоуборочной техники в Могилеве"
-                             title="Ремонт снегоуборочной техники в Могилеве">
+                             alt="Ремонт снегоуборочной техники в Москве"
+                             title="Ремонт снегоуборочной техники в Москве">
                         <span>Ремонт снегоуборочной техники</span>
+                    </a>
+                </li>
+
+
+                <li class="">
+                    <a href="remont-benzoinstrumenta.html">
+                        <img src="uploads/cat_kategoriya-stroitelnoy-i-dorojnoy-tehniki.jpg"
+                             alt="Ремонт дорожной и строительной малой техники в Москве"
+                             title="Ремонт дорожной и строительной малой техники в Москве">
+                        <span>Ремонт дорожной и строительной малой техники</span>
                     </a>
                 </li>
 
@@ -452,7 +411,7 @@
                                  style=" background-color:#fff; color:#000; border-radius: 0; font-size: em;">          </span>
                     <span class="mg-trigger-text">
               <strong>Удобное местоположение</strong><br>
-Мы располагаемся в центре Могилева, но не в жилой зоне          </span>
+Мы располагаемся в Москве, но не в жилой зоне </span>
                 </div>
                 <div class="mg-trigger" style="background-color: #fff; height:200px; width: 25%;">
           <span class="mg-trigger-icon" style="float:none; display: block">
@@ -488,14 +447,14 @@
         <div class="centered">
             <div class="desc-seo-index">
                 <h2>
-                    <strong>Ремонт электро/бензоинструментов и садовой техники&nbsp;в Могилеве</strong>
+                    <strong>Ремонт бензоинструментов и садовой техники&nbsp;в Москве</strong>
                 </h2>
 
                 <p>
                     <strong>Сервисный центр ООО «Техстройсервис»</strong> <strong>выполняет ремонт
-                    электро-/бензоинструментов ,садовой , дорожной и строительной малой техники в городе
-                    Могилеве</strong>, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного
-                    центра <strong>уже более 20 лет</strong> выполняют ремонт электро-/бензоинструментов и садовой
+                    бензоинструментов, садовой, дорожной и строительной малой техники в городе
+                    Москва</strong>, а также осуществляет продажу запчастей для неё. Специалисты нашего сервисного
+                    центра <strong>уже более 20 лет</strong> выполняют ремонт бензоинструментов и садовой
                     техники любой сложности. Одним из <strong>важный преимуществ нашего сервисного центра</strong>
                     является то, что <strong>мы выполняем ремонт полного цикла</strong>.
                 </p>
@@ -513,21 +472,8 @@
                 </p>
 
                 <h3>
-                    <strong>Нужен ремонт электро-/бензоинструментов в Могилеве?</strong>
+                    <strong>Нужен ремонт бензоинструментов в Москве?</strong>
                 </h3>
-
-                <p>
-                    Смело обращайтесь в наш сервисный центр. У нас Вы можете&nbsp;<strong>отремонтировать
-                    электроинструменты</strong>&nbsp;следующих торговых марок:&nbsp;
-                </p>
-
-                <p>
-                    <strong><span style="color:#FF0000;">BOSCH</span>, <span style="color:#40E0D0;">Makita</span>, <span
-                            style="color:#008000;">Metabo</span>,&nbsp;<span style="color:#008080;">HITACHI</span>,
-                        <span style="color:#B22222;">WÜRTH</span>, Einhell, <span style="color:#FF0000;">SKIL</span>,
-                        WATT, <span style="color:#0000FF;">ФИОЛЕНТ</span>, <span style="color:#B22222;">Milwaukee</span>,
-                        DeWALT</strong>
-                </p>
 
                 <p>
                     У нас Вы можете&nbsp;<strong>отремонтировать бензоинструменты</strong>&nbsp;следующих торговых
@@ -622,7 +568,7 @@
     <!--Подвал сайта-->
     <div class="footer ">
         <div class="footer-top">
-            <div class="centered">
+            <div class="centered" style="display: flex; justify-content: space-around">
                 <div class="col">
                     <div class="logo-block" id="logo-footer-top">
                         <a href="index.htm">
@@ -635,11 +581,6 @@
                         ремонтом электроинструментов любой сложности и знают свою работу много лет. Оказываем услуги по
                         ремонту более 20 лет.
                     </div>
-                    <div class="logo-desc-2">УНП: 700050073, г.Могилев, пр-т, Мира, 2 а, ая-46. Решение Могилевского
-                        Горисполкома №25-10 от 30.11.2000г.
-                    </div>
-
-                    <div class="logo-adress"> г. Могилев, пр-т Мира, 2а, ая-46</div>
                 </div>
                 <div class="col">
                     <div class="footer-h2">Информация</div>
@@ -648,31 +589,21 @@
                         <li><a href="catalog.html"><span>Каталог услуг</span></a></li>
                     </ul>
                     <ul class='footer-column'>
-                        <li><a href="https://tsservice.by/https://24torg.by/"><span>Интернет-магазин 24torg</span></a>
-                        <li><a href="http://milw-tss.tss.by/"><span>Инструменты Milwaukee</span></a></li>
-                    </ul>
-                    <ul class='footer-column'>
                         <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                     <div class="footer-h2">Каталог</div>
                     <ul>
-                        <li><a href="remont-elektroinstrumenta.html"><span>Ремонт электроинструмента</span></a></li>
                         <li><a href="remont-benzoinstrumenta.html"><span>Ремонт бензоинструмента</span></a></li>
                         <li><a href="remont-benzoinstrumenta.html"><span>Ремонт садовой техники</span></a></li>
                         <li>
                             <a href="remont-benzoinstrumenta.html"><span>Ремонт бензиновых и электродвигателей</span></a>
                         </li>
-                        <li><a href="remont-elektroinstrumenta.html"><span>Ремонт компрессоров</span></a></li>
                         <li><a href="remont-benzoinstrumenta.html"><span>Ремонт тепловых пушек</span></a></li>
                         <li><a href="remont-benzoinstrumenta.html"><span>Ремонт генераторов</span></a></li>
                         <li>
                             <a href="remont-benzoinstrumenta.html"><span>Ремонт мотоблоков и мотокультиваторов</span></a>
                         </li>
                         <li><a href="remont-benzoinstrumenta.html"><span>Ремонт снегоуборочной техники</span></a></li>
-                        <li><a href="remont-elektroinstrumenta.html"><span>Ремонт моек высокого давления</span></a></li>
-                        <li>
-                            <a href="remont-benzoinstrumenta.html"><span>Ремонт дорожной и строительной малой техники</span></a>
-                        </li>
                     </ul>
                 </div>
                 <div class="col">
@@ -681,8 +612,6 @@
 
                         <a href="tel:+375298449043">+375 (29) 844-90-43</a>
                         <a href="tel:+375447279043">+375(44) 727-90-43</a>
-
-                        <a href="mailto:info@tss.by">info@tss.by</a>
 
                     </div>
                     <div class="footer-h2">Мы в соцсетях</div>
@@ -703,29 +632,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col last-col">
-                    <div class="footer-h2">Как нас найти</div>
-                    <div class="footer-map">
-                        <script type="text/javascript" charset="utf-8" async=""
-                                src="services/constructor/1.0/js/index.htm?um=constructor%3Af84c92ab2000fb075da6139493aa801ed748a2d7827e3dacabbfcb1ab25ab587&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-
-                    </div>
-                </div>
                 <div class="clear"></div>
             </div>
         </div>
 
 
-        <div class="footer-bottom">
-            <div class="centered clearfix">
-                <div class="copyright">© ООО "Техстройсервис", 2021 - Сервисный центр</div>
-                <div class="copyright-2">
-                    <noindex>Разработка и дизайн сайта - <a href="http://1703.by" target="_blank"
-                                                            style="text-decoration: underline;">Вебстудия 1703</a>
-                    </noindex>
-                </div>
-            </div>
-        </div>
     </div>
     <!--/Подвал сайта-->
 
